--- a/Squib.UserService.Host/Squib.UserService.Host.csproj
+++ b/Squib.UserService.Host/Squib.UserService.Host.csproj
@@ -7,6 +7,7 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="8.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="8.0.0" />
+    <ProjectReference Include="..\Squib.UserService.API\Squib.UserService.API.csproj" />
   </ItemGroup>
 
 </Project>
